--- a/css/cal.css
+++ b/css/cal.css
@@ -5,11 +5,20 @@
 
 .top_cal {
   margin: auto;
-  width: 600px;
+  width: 420px;
   border: 8px outset #8CA6DB;
-  border-radius: 10px;
+  border-radius: 20px;
   background-image: linear-gradient(150deg, #B993D6, #8CA6DB);
-  margin-top: 10px;
+  margin-top: 40px;
+  margin-right: 0;
+  margin-left: 50px;
+  position: sticky;
+}
+
+.todo__up__container {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 tr {
