--- a/css/style.css
+++ b/css/style.css
@@ -11,20 +11,46 @@
 
 body {
     min-height: 100vh;
-    background-color: #F0E9D2;
+    margin: auto;
 }
 
 .container {
-    max-width: 500px;
+    max-width: 700px;
+    width: 417px;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-left: 50px;
     padding: 10px;
     border: 8px outset #8CA6DB;
     border-radius: 20px;
     background-image: linear-gradient(150deg, #B993D6, #8CA6DB);
 }
 
+.todo__container {
+    display: flex;
+    width: 1000px;
+    height: 700px;
+    margin-left: 0;
+    justify-content: center;
+    align-items: center;
+    /* border: 5px solid red; */
+    position: relative;
+    overflow: auto;
+}
 
+.todo__container::after {
+    width: 100%;
+    height: 75%;
+    content: "";
+    background-image: url("/img/note.jpg");
+    background-repeat: no-repeat;
+    position: absolute;
+    /* background-size : cover; */
+    opacity: 0.5;
+    z-index: -1;
+    background-attachment: fixed;
+    position: fixed;
+}
 
 .txtb {
     width: 100%;
